[package]
name = "server_craweler_wat"
version = "0.1.0"
authors = ["michas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = {version = "*"}
reqwest = {version = "0.10.4", features = ["blocking"]}
scraper = "0.11.0"
tokio = {version = "*", features = ["macros","fs"]}
serde = { version = "*", features = ["derive"] } 
serde_json = "*"
rust-s3 = "0.19.4"